# syslog-fmt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: default_config.rs  fine_grained_write_control.rs  simple_datagram_based_logger.rs  unix_datagram.rs
src/: lib.rs  v5424.rs
tests/: assert_heap_allocations_with_structured_data.rs  assert_no_heap_allocations.rs  assert_no_heap_allocations_with_structured_data.rs  assert_no_heap_allocations_without_structured_data.rs
