[package]
authors = ["opensource@tandemdrive.com"]
description = "A formatter for the 5425 syslog protocol"
edition = "2021"
keywords = ["syslog", "rfc-5424", "logging", "logs"]
license = "MIT OR Apache-2.0"
name = "syslog_fmt"
readme = "README.md"
repository = "https://github.com/tandemdrive/syslog-fmt"
rust-version = "1.60"
version = "0.2.0"

[dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["clock"]}

[dev-dependencies]
arrayvec = "0.7.2"
assert_matches = "1.5.0"
env_logger = "0.10.0"
is-terminal = "0.4.7"
log = "0.4.17"
parking_lot = "0.12.1"
