[package]
authors = ["opensource@tandemdrive.com"]
description = "A formatter for the 5425 syslog protocol"
edition = "2021"
keywords = ["syslog", "rfc-5424", "logging", "logs"]
license = "MIT OR Apache-2.0"
name = "syslog_fmt"
readme = "README.md"
repository = "https://github.com/tandemdrive/syslog-fmt"
rust-version = "1.60"
version = "0.3.2"

[features]
default = ["chrono"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.31", optional = true, default-features = false, features = ["clock"]}

[dev-dependencies]
arrayvec = "0.7.4"
assert_matches = "1.5.0"
dhat = "0.3.2"
env_logger = "0.10.0"
log = "0.4.20"
parking_lot = "0.12.1"

[[test]]
name = "assert_no_heap_allocations_without_structured_data"
harness = false

[[test]]
name = "assert_no_heap_allocations_with_structured_data"
harness = false
